# interview-preparation

./: .gitignore  README.md  REQUIREMENTS.MD  remove_duplicate_array.py  remove_n_node.py  valid_anagram.py
solution-tracer/: README.md  pyproject.toml  requirements.txt
solution-tracer/docs/: trace-schema.md  tracer-requirements.md  visualizer-requirements.md
solution-tracer/examples/: binary_tree_level_order.py  contains_duplicate.py  course_schedule.py  reverse_linked_list.py  two_sum.py  valid_parentheses.py
solution-tracer/frontend/: README.md  index.html  package.json
solution-tracer/frontend/src/: index.css  main.tsx
solution-tracer/frontend/src/components/common/: DropZone.tsx  EmptyState.tsx  FilePicker.tsx  SampleTraceMenu.tsx
solution-tracer/frontend/src/components/controls/: PlaybackControls.tsx  TimelineSlider.tsx
solution-tracer/frontend/src/components/event/: EventPanel.tsx
solution-tracer/frontend/src/components/layout/: Header.tsx  VisualizerLayout.tsx
solution-tracer/frontend/src/data/: sampleTraces.ts
solution-tracer/frontend/src/hooks/: useKeyboardShortcuts.ts  usePlaybackEngine.ts
solution-tracer/frontend/src/stores/: themeStore.ts  traceStore.ts
solution-tracer/frontend/src/types/: snapshot.ts  trace.ts
solution-tracer/frontend/src/utils/: graphLayout.ts  treeLayout.ts
solution-tracer/tracer/: __init__.py  autotrace.py  checker.py  config.py  discovery.py  generate.py  models.py  timeline.py
solution-tracer/tracer/formatters/: markdown.py  stdout.py
solution-tracer/tracer/snapshots/: array.py  heap.py  queue.py  tree.py
(+262 files in other folders)
