[project]
name = "solution-tracer"
version = "0.1.0"
description = "Educational algorithm tracing and visualization for coding interview preparation."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
rich = ["rich>=13"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tracer*"]
